--- a/srcs/style/home.css
+++ b/srcs/style/home.css
@@ -82,6 +82,29 @@ body {
   margin-top: 4px
 }
 
+/* Pagination links */
+
+.pagination {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+.pagination a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+/* Add a grey background color on mouse-over */
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
 /* like button */
 
 @media screen and (max-width: 900px) {
